# music

./: .gitignore  db.sqlite3  pyproject.toml
music/: urls.py
music/admin/: __init__.py  album.py  artist.py  category.py  music.py  playlist.py  user.py
music/migrations/: 0001_initial.py
music/models/: __init__.py  album.py  artist.py  base.py  category.py  music.py  playlist.py  user.py
music/serializers/: __init__.py  music.py  playlist.py
music/service/: music.py
music/views/: __init__.py  authentication.py  music.py  playlist.py  views.py
mysite/: settings.py  urls.py
